--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
+public/
+.DS_Store
+
 *.egg-info/
 .installed.cfg
 *.egg
